--- a/front/src/pages/UserPage.css
+++ b/front/src/pages/UserPage.css
@@ -1,3 +1,12 @@
-.userpage-container {
-  padding: 20px;
+.user-page-container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+  align-items: center;
+  padding: var(--gap) 0;
+}
+
+.user-page-container > * {
+  width: 100%;
+  max-width: 800px;
 }
